1_archive/polls/heyform/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heyform
  labels:
    app.kubernetes.io/name: heyform
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: heyform
