1_archive/polls/heyform/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: heyform
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: sh-heyform.svg
    gethomepage.dev/name: Heyform
    gethomepage.dev/description: A form builder and submission system
    gethomepage.dev/pod-selector: app.kubernetes.io/name=heyform
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - 'forms.jef.app'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: heyform
          port: 8000
          group: ''
          kind: Service
          weight: 1
